removed excitement added tests

--- a/SignalR2D2/Views/Home/Index.cshtml
+++ b/SignalR2D2/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <p id="storyBanner"><em class="text-muted">choose a story!</em></p>
+    <p id="storyBanner"><em class="text-muted">choose a story</em></p>
 </div>
 
 <div class="row">
